<resources>
    <string name="app_name">AppInfinityCrypto</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>
    <string name="full_name">Full name</string>
    <string name="todo">TODO</string>
    <string name="sap_xep">sap xep</string>
    <string name="search">Search…</string>

    <string name="tab_market">Market</string>
    <string name="tab_home">Home</string>
    <string name="tab_watchlist">Watch List</string>
    <string name="tab_news">News</string>
    <string name="account">Account</string>

    <string name="tab_home_admin">Home</string>
    <string name="tab_listUser">List User</string>
    <string name="tab_listAdmin">List Admin</string>
    <string name="tab_statistical">Statistical</string>
    <string name="tab_notification">Notification</string>
    <string name="tab_feedback">FeedBack</string>
    <string name="account_admin">Account</string>

    <string name="default_web_client_id1" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>