<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/second_fragment"
        android:icon="@drawable/ic_market"
        android:title="@string/tab_market" />
    <item
        android:id="@+id/third_fragment"
        android:icon="@drawable/ic_watchlist"
        android:title="@string/tab_watchlist" />
    <item
        android:id="@+id/fourth_fragment"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/tab_news" />
    <item
        android:id="@+id/fiveth_fragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu>