<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeadmin11"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home_admin" />
    <item
        android:id="@+id/listUser11"
        android:icon="@drawable/ic_list_user"
        android:title="@string/tab_listUser" />
    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_baseline_feedback_24"
        android:title="@string/tab_feedback" />
    <item
        android:id="@+id/statistical"
        android:icon="@drawable/ic_market"
        android:title="@string/tab_statistical" />
    <item
        android:id="@+id/accountadmin11"
        android:icon="@drawable/ic_account"
        android:title="@string/account_admin" />
</menu>